# Yolov3deneme

./: .gitignore  README.md  apk.yaml  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov13n.ncnn.param  yolov13s.ncnn.param
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  ndkcamera.cpp  ndkcamera.h  yolo.cpp  yolo.h
app/src/main/java/com/mpj/yolov13/: MainActivity.java  Yolo.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
